		loop facility in MASON.  Also, SimState.job() is introduced,
		giving the user some knowledge about which job number is
		being used.
	Minor patching to CapturingCanvas3D to avoid getting blank 
		snapshots of Display3D.  There might be a race condition 
		in GraphicsContext3D.readRaster(). Right now we call 
		readRaster twice and this seems to fix the problem.
	Bug fix Bag.java's iterator remove() method.  Performing a remove
		wouldn't back up to let next() consider the new item
		which just got put into the removed item's slot.  Thanks
		to Bruna VanDenBossche (Bruno.VanDenBossche@intec.ugent.be)
	Properties._setValue now protected
	PropertyInspector.setStopper now public
	ObjectGridPortrayal2D now has a SimplePortrayal2D as its default
		null portrayal, to be a bit more consistent with
		SparseGridPortrayal2D.	
	Slight speed tweak to Schedule.Key.compareTo() which considers the more
		common possibilities first.  Hope that didn't break anything.
	Added PDFEncoder.java.  Ultimately we'll use this to make nice PDF
		output of 2D displays.
	Fixed bug in ChartGenerator.setDomainAxisLabel (wasn't setting the
		value right).
	Fixed slight bug in ChartingPropertyInspector which was preventing us
		from adding data immediately on popping up a window.
	Charts now saved with ".pdf" extension, not ".PDF"
	PDFEncoder.java has been rigged up to allow the user to save 2D
		screenshots in either PDF or in PNG
	Adjustments to dialog boxes to make them look better in OS X; don't know
		if we uglified them in Windows yet.
	Merged Antialias and Antialias Text together in Display2D's options
	Charts now draw in color.  We had previously set them to only draw
		with black lines for printing purposes -- now they're in 
		color because of people's requests.
	SimpleEdgePortrayal2D can now draw edges either as lines or as
		triangles.  May add arrows in a bit.
	Added the ability to turn off random shuffling in the Schedule, per
		request from Michael Lees (mhl@cs.nott.ac.uk)